--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guia Rápido de Acessibilidade</title>
   <meta property="og:title" content="Guia Rápido de Acessibilidade">
-  <meta property="og:description" content="Um guia prático com dicas de acessibilidade web (A11Y) para desenvolvedores.">
+  <meta property="og:description" content="Um guia prático de acessibilidade web para desenvolvedores. Confira dicas de contraste, semântica e muito mais.">
   <meta property="og:image" content="https://andrea-leite.github.io/guia-acessibilidade/capa.png">
   <meta property="og:url" content="https://andrea-leite.github.io/guia-acessibilidade/">
   <meta property="og:type" content="website">
-  <link rel="stylesheet" href="style.css">
+
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>♿</text></svg>">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
